# Real-Time-Computer-Vision-System

./: .gitignore  Dockerfile  README.md  pyproject.toml
configs/: app.yaml
frontend/: index.html
src/: main.py
src/api/: ws.py  ws_manager.py
src/camera/: camera.py  manager.py  registry.py
src/config/: loader.py
src/pipeline/: context.py  draw.py  processor.py  tracking.py
src/pipeline/broadcasters/: ws.py
src/pipeline/processors/: draw.py
src/postprocess/: base.py  tracking.py
src/tests/: test_websocket.py
src/tracking/: base.py  bytetrack.py  iou.py  track.py
src/vision/: detector.py
src/vision/input/: base.py  image.py  video.py
