[project]
name = "real-time-computer-vision-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.133.1",
    "opencv-python>=4.13.0.92",
    "ultralytics>=8.4.18",
    "uvicorn[standard]>=0.41.0",
    "websocket-client>=1.9.0",
]
